--- a/shrim/help.css
+++ b/shrim/help.css
@@ -15,6 +15,9 @@ body{
     position: absolute; left: 1070px;
 }.eng{
 	position: absolute; left: 1000px;
+}.eng1{
+	position:absolute; left: 1070px;;
+
 }.collapsible-header{
 	background-color: pink;
 	border-radius: 20px;
@@ -36,4 +39,10 @@ body{
     position: absolute; top: 60px; left: 525px;
     font-family: "Lucida Console", Lucida, monospace;
     font-size: 40px;
+}.about{
+	border-radius: 20px;
+	background-color: darkblue;
+	color: lightblue;
+}.about:hover{
+	background-color:yellow;
 }
